--- a/src/css/toggles.css
+++ b/src/css/toggles.css
@@ -79,6 +79,64 @@
 	padding-top: 175px;
 }
 
+/* useTopToolbar */
+.toggle-useTopToolbar #top-toolbar {
+	display: block;
+	height: 30px;
+	border-bottom-width: 1px;
+}
+.toggle-useTopToolbar body.application #main {
+	padding-top: 55px;
+}
+.toggle-useTopToolbar #sidebar-tools,
+.toggle-useTopToolbar #sidebar-reports {
+	top: 70px;
+}
+
+/* useTopToolbar && useHeader */
+.toggle-useTopToolbar.toggle-useHeader body.application #main {
+	padding-top: 100px;
+}
+
+/* useTopToolbar && useWBHeader */
+.toggle-useTopToolbar.toggle-useWBHeader body.application #main {
+	padding-top: 95px;
+}
+
+/* useTopToolbar && useHeader && useWBHeader */
+.toggle-useTopToolbar.toggle-useHeader.toggle-useWBHeader body.application #main {
+	padding-top: 140px;
+}
+
+/* useTopToolbar && useNewViewSelector */
+.toggle-useTopToolbar.toggle-useLegacyViewSelector body.application #main {
+	padding-top: 120px;
+}
+.toggle-useTopToolbar.toggle-useLegacyViewSelector #top-toolbar {
+	top: 105px;
+}
+.toggle-useTopToolbar.toggle-useLegacyViewSelector #sidebar-tools,
+.toggle-useTopToolbar.toggle-useLegacyViewSelector #sidebar-reports {
+	top: 135px;
+}
+
+/* useTopToolbar && useNewViewSelector && useHeader */
+.toggle-useTopToolbar.toggle-useLegacyViewSelector.toggle-useHeader body.application #main {
+	padding-top: 165px;
+}
+
+/* useTopToolbar && useNewViewSelector && useWBHeader */
+.toggle-useTopToolbar.toggle-useLegacyViewSelector.toggle-useWBHeader body.application #main {
+	padding-top: 160px;
+}
+
+/* useTopToolbar && useNewViewSelector && useHeader && useWBHeader */
+.toggle-useTopToolbar.toggle-useLegacyViewSelector.toggle-useHeader.toggle-useWBHeader body.application #main {
+	padding-top: 205px;
+}
+
+
+
 /* useWBFooter */
 .toggle-useWBFooter #footer {
 	display: block;
