names of layer tools

--- a/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.css
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.css
@@ -3,8 +3,7 @@
 	position: absolute;
 	min-height: 100px;
 	height: auto;
-	min-width: 300px;
-	width: auto;
+	width: 300px;
 	left: 350px;
 	top: auto;
 	bottom: 50px;
