--- a/src/__new/js/view/settings/Settings.css
+++ b/src/__new/js/view/settings/Settings.css
@@ -32,9 +32,14 @@
 }
 .tool-window-header span {
 	color: #666;
+	display: inline-block;
 	font-size: .9rem;
 	font-weight: bold;
-	padding: .2rem;
+	padding: 0 .2rem .2rem;
+	white-space: nowrap;
+	width: 90%;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .tool-window-header .window-close {
 	float: right;
