--- a/src/__new/js/view/widgets/inputs/sliderbox/SliderBoxSingle.html
+++ b/src/__new/js/view/widgets/inputs/sliderbox/SliderBoxSingle.html
@@ -1,4 +1,7 @@
 <div class="floater-row slider-box">
+	<div class="floater-row slider-caption">
+		<span>{{name}}</span>
+	</div>
 	<div class="floater-row slider-row" id="{{id}}"></div>
 	<div class="floater-row slider-labels">
 		<div class="slider-labels-min">{{labelMin}}</div>
