--- a/src/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.html
+++ b/src/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.html
@@ -1,5 +1,5 @@
 <div id="{{panelId}}-panel">
-	<div class="panel-header open" id="{{panelId}}-panel-header"><h3>{{name}}</h3><div class="panel-icon arrow-up"></div>
+	<div class="panel-header open" id="{{panelId}}-panel-header"><div class="panel-icon"></div><h3>{{name}}</h3>
 	</div>
 	<div class="panel-body open" id="{{panelId}}-panel-body">
 	</div>
