3D map floater style changes

--- a/src/__new/js/view/widgets/WidgetFloater.html
+++ b/src/__new/js/view/widgets/WidgetFloater.html
@@ -3,7 +3,7 @@
 		<span>{{name}}</span>
 		<div class="floater-tools-container">
 			<div title="Minimise" class="floater-tool widget-minimise">
-				<img alt="Maximise" src="__new/img/minimise-icon.png"/>
+				<img alt="Minimise" src="{{minimiseSrc}}"/>
 			</div>
 		</div>
 	</div>
