--- a/src/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.html
+++ b/src/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.html
@@ -1,5 +1,8 @@
 <div id="{{panelId}}-panel">
-	<div class="panel-header open" id="{{panelId}}-panel-header"><div class="panel-icon"></div><h3>{{name}}</h3>
+	<div class="panel-header open" id="{{panelId}}-panel-header">
+		<div class="panel-icon expand-icon"></div>
+		<div class="panel-icon folder-icon"></div>
+		<h3>{{name}}</h3>
 	</div>
 	<div class="panel-body open" id="{{panelId}}-panel-body">
 	</div>
