--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -4,6 +4,58 @@
 	}
 }
 
+@media screen and (max-width: 1400px) {
+	#view-selector {
+		height: 70px;
+	}
+	#view-selector > .group {
+		display: block;
+	}
+	#view-selector > .group:not(:first-child) {
+		margin-top: 0;
+	}
+
+	#top-toolbar {
+		top: 70px;
+	}
+
+
+	#sidebar-tools,
+	#sidebar-reports {
+		top: 70px;
+	}
+	body.application #main {
+		padding-top: 55px;
+	}
+
+	.toggle-useWBHeader body.application #main {
+		padding-top: 95px;
+	}
+	.toggle-useHeader body.application #main {
+		padding-top: 100px;
+	}
+	.toggle-useWBHeader.toggle-useHeader body.application #main {
+		padding-top: 140px;
+	}
+
+	.toggle-useTopToolbar body.application #main {
+		padding-top: 85px;
+	}
+	.toggle-useTopToolbar #sidebar-tools,
+	.toggle-useTopToolbar #sidebar-reports {
+		top: 100px;
+	}
+	.toggle-useTopToolbar.toggle-useHeader body.application #main {
+		padding-top: 130px;
+	}
+	.toggle-useTopToolbar.toggle-useWBHeader body.application #main {
+		padding-top: 125px;
+	}
+	.toggle-useTopToolbar.toggle-useHeader.toggle-useWBHeader body.application #main {
+		padding-top: 170px;
+	}
+}
+
 @media screen and (max-width: 1140px) {
 	#legacy-view-selector > .label {
 		width: 70px;
