--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -17,6 +17,9 @@
 	max-width: 40rem;
 	z-index: 10000;
 }
+#feature-info-window.active {
+	z-index: 10001;
+}
 #feature-info-window .feature-info-window-header {
 	border-bottom: 2px solid #ddd;
 	font-size: .85rem;
