--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
@@ -51,12 +51,34 @@
 	cursor: pointer;
 }
 
-#world-wind-widget-3Dmap-switch {
-	padding: .5rem .3rem;
+/*#world-wind-widget-3Dmap-switch {*/
+	/*padding: .5rem .3rem;*/
+/*}*/
+/*#world-wind-widget-3Dmap-switch .checkbox-label {*/
+	/*font-weight: 600;*/
+	/*font-size: .85rem;*/
+/*}*/
+
+
+.floater-fake-header {
+	background: #ddd;
+	height: 31px;
+	line-height: 31px;
+	padding: 0 .5rem 0 1rem;
 }
-#world-wind-widget-3Dmap-switch .checkbox-label {
-	font-weight: 600;
-	font-size: .85rem;
+.floater-fake-header span {
+	color: #333;
+	font-size: 12px;
+	font-weight: 700;
+}
+.floater-fake-header-tool {
+	position: relative;
+	float: right;
+}
+.floater-fake-header-tool img {
+	position: absolute;
+	right: 0;
+	top: 7px;
 }
 
 body.mode-3d .x-closable,
