--- a/src/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.css
@@ -87,6 +87,7 @@
 	padding: 0 .3rem;
 	height: 1.3rem;
 	line-height: 1.2rem;
+	color: #555;
 }
 .panel-body .floater-row .radiobox-label,
 .panel-body .floater-row .checkbox-label {
