--- a/src/__new/js/view/worldWind/layers/layerTools/LayerToolIcon.css
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerToolIcon.css
@@ -10,6 +10,7 @@
 	color: rgba(104,103,116,.65);
 	display: inline-block;
 	font-size: .9rem;
+	font-family: "FontAwesome";
 	transition: color .3s ease-out;
 	vertical-align: middle;
 }
