--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
@@ -82,7 +82,7 @@
 	top: 7px;
 }
 
-body.mode-3d .x-window:not(.thematic-maps-settings),
+body.mode-3d .x-window:not(.thematic-maps-settings, .x-window-ghost),
 body.mode-3d #tools-container,
 body.mode-3d #widget-container .placeholder:not(#placeholder-world-wind-widget),
 body.mode-3d #widget-container .placeholder.open:not(#placeholder-world-wind-widget),
