--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -150,8 +150,7 @@
     background-position: -82px -226px;
 }
 
-body.mode-3d .x-window:not(.thematic-maps-settings),
-body.mode-3d .x-window:not(.x-window-ghost),
+body.mode-3d .x-window:not(.thematic-maps-settings):not(.x-window-ghost),
 body.mode-3d #tools-container,
 body.mode-3d #widget-container .placeholder:not(#placeholder-world-wind-widget),
 body.mode-3d #widget-container .placeholder.open:not(#placeholder-world-wind-widget),
