1703: Move select in map into map tools

--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -933,7 +933,7 @@
 }
 
 .newDesign .x-btn.btn-map-tool button .x-btn-icon {
-	top: 13px;
+/* 	top: 13px; */
 }
 
 .newDesign .x-btn.btn-tool-feature-info button .x-btn-icon {
