--- a/src/css/components.css
+++ b/src/css/components.css
@@ -357,8 +357,16 @@
 	background-image: url("../images/icons/paging-refresh.png") !important;
 }
 
-.x-panel-header .x-tool-areacollapse {
-	background-image: url("../images/icons/collapse.gif") !important;
+.x-panel-header .x-tool-areacollapseall {
+	background-image: url("../images/new/areacollapseall.png") !important;
+}
+
+.x-panel-header .x-tool-areacollapselevel {
+	background-image: url("../images/new/areacollapse.png") !important;
+}
+
+.x-panel-header .x-tool-areaexpandlevel {
+	background-image: url("../images/new/areaexpand.png") !important;
 }
 
 .x-panel-header .x-tool-gear {
