--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
@@ -46,7 +46,7 @@
 
 /* Floater body */
 #floater-world-wind-widget .floater-body {
-	 padding: 0;
+	padding: .2rem 0 0 0;
 }
 #floater-world-wind-widget .checkbox-row {
 	transition: background .3s ease-out;
