--- a/src/css/components.css
+++ b/src/css/components.css
@@ -676,8 +676,12 @@
 }
 
 .detached-window {
-	margin-top: 99999px;
+	/*margin-top: 99999px;*/
+	visibility: hidden;
+	/* pointer-events: none; */
 }
 .detached-window.open {
-	margin-top: 0;
+	/*margin-top: 0;*/
+	visibility: visible;
+	pointer-events: auto;
 }
