--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -672,6 +672,9 @@ body.mode-3d #top-toolbar-3dmap {
 #top-toolbar .item.disabled {
 	color: #bbb;
 }
+#top-toolbar .item.hidden {
+	display: none;
+}
 #top-toolbar-features .item {
 	border-right: 1px solid #ddd;
 	padding-left: 40px;
