--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -160,3 +160,25 @@ body.mode-3d .floater.open:not(#floater-world-wind-widget),
 body.mode-3d .settings-window {
     display: none;
 }
+
+#custom-layers {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
+}
+#custom-layers-container {
+	width: 200%;
+	height: 100%;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	background: #ff0;
+}
+.custom-layers-content {
+	width: 50%;
+	height: 100%;
+	float: left;
+}
