--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -161,6 +161,27 @@ body.mode-3d .settings-window {
     display: none;
 }
 
+
+.ptr-btn {
+	display: inline-block;
+	height: 30px;
+	line-height: 30px;
+	padding: 0 10px;
+	text-align: center;
+
+	background: rgba(201, 45, 66, .85);
+	color: #fff;
+    border: 0;
+    border-radius: 1px;
+    cursor: pointer;
+    transition: 
+    	background .3s ease-out;
+}
+.ptr-btn:hover {
+	background: #ad2738;
+}
+
+
 #custom-layers {
 	width: 100%;
 	height: 100%;
@@ -175,10 +196,26 @@ body.mode-3d .settings-window {
 	top: 0;
 	left: 0;
 
-	background: #ff0;
+	transition:
+		left .3s ease-in-out;
 }
 .custom-layers-content {
 	width: 50%;
 	height: 100%;
 	float: left;
+	position: relative;
+}
+#custom-layers-container.view-action {
+	left: -100%;
+}
+
+#custom-layers-start > div {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+#custom-layers-start .ptr-btn {
+	display: block;
+	margin: 20px 0;
 }
